--- a/Installer/dolphin-emu.6
+++ b/Installer/dolphin-emu.6
@@ -6,12 +6,10 @@ Windows, Linux, OS X, and recent Android devices.
 .B dolphin-emu
 [\fB-h\fR] [\fB-d\fR] [\fB-l\fR] [\fB-e \fIROM\fR] [\fB-b\fR] [\fB-V \fIVIDEO\fR] [\fB-A \fIAUDIO\fR]
 .SH DESCRIPTION
-Dolphin is a Gamecube, Wii and Triforce (the arcade machine based on the
-Gamecube) emulator, which supports full HD video with several enhancements such
-as compatibility with all PC controllers, turbo speed, networked multiplayer,
-and more.
-.P
-Most games run perfectly or with minor bugs.
+Dolphin is an emulator for two recent Nintendo video game consoles: the
+GameCube and the Wii. It allows PC gamers to enjoy games for these two consoles
+in full HD (1080p) with several enhancements: compatibility with all PC
+controllers, turbo speed, networked multiplayer, and even more!
 .P
 \fBdolphin-emu\fR features a graphical user interface made using wxWidgets.
 .SH OPTIONS
