--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/Controller/ja.lproj/ControllerSettings.strings
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/Controller/ja.lproj/ControllerSettings.strings
@@ -1,6 +1,6 @@
 
-/* Class = "UILabel"; text = "Configuration"; ObjectID = "0TW-1a-IeH"; */
-"0TW-1a-IeH.text" = "Configuration";
+/* Class = "UILabel"; text = "設定"; ObjectID = "0TW-1a-IeH"; */
+"0TW-1a-IeH.text" = "設定";
 
 /* Class = "UILabel"; text = "Extension Name"; ObjectID = "0eE-YR-R88"; */
 "0eE-YR-R88.text" = "Extension Name";
@@ -50,11 +50,11 @@
 /* Class = "UILabel"; text = "デバイス"; ObjectID = "FT1-rG-Tk3"; */
 "FT1-rG-Tk3.text" = "デバイス";
 
-/* Class = "UILabel"; text = "IP"; ObjectID = "Gq2-rT-Uq2"; */
-"Gq2-rT-Uq2.text" = "IP";
+/* Class = "UILabel"; text = "IPアドレス"; ObjectID = "Gq2-rT-Uq2"; */
+"Gq2-rT-Uq2.text" = "IPアドレス";
 
-/* Class = "UINavigationItem"; title = "Devices"; ObjectID = "IZx-UR-35B"; */
-"IZx-UR-35B.title" = "Devices";
+/* Class = "UINavigationItem"; title = "デバイス"; ObjectID = "IZx-UR-35B"; */
+"IZx-UR-35B.title" = "デバイス";
 
 /* Class = "UILabel"; text = "形式"; ObjectID = "J79-DY-CEt"; */
 "J79-DY-CEt.text" = "形式";
@@ -65,8 +65,8 @@
 /* Class = "UINavigationItem"; title = "形式"; ObjectID = "JWn-tN-bch"; */
 "JWn-tN-bch.title" = "形式";
 
-/* Class = "UINavigationItem"; title = "Configuration"; ObjectID = "Jcs-zW-f0t"; */
-"Jcs-zW-f0t.title" = "Configuration";
+/* Class = "UINavigationItem"; title = "設定"; ObjectID = "Jcs-zW-f0t"; */
+"Jcs-zW-f0t.title" = "設定";
 
 /* Class = "UILabel"; text = "Profile Name"; ObjectID = "KqR-0N-gs6"; */
 "KqR-0N-gs6.text" = "Profile Name";
@@ -77,11 +77,11 @@
 /* Class = "UILabel"; text = "Option"; ObjectID = "LaI-lg-59f"; */
 "LaI-lg-59f.text" = "Option";
 
-/* Class = "UILabel"; text = "Save Configuration Profile"; ObjectID = "NB0-GD-Qur"; */
-"NB0-GD-Qur.text" = "Save Configuration Profile";
+/* Class = "UILabel"; text = "保存"; ObjectID = "NB0-GD-Qur"; */
+"NB0-GD-Qur.text" = "保存";
 
-/* Class = "UILabel"; text = "Port"; ObjectID = "PCF-H3-GB4"; */
-"PCF-H3-GB4.text" = "Port";
+/* Class = "UILabel"; text = "ポート"; ObjectID = "PCF-H3-GB4"; */
+"PCF-H3-GB4.text" = "ポート";
 
 /* Class = "UITableViewController"; title = "Controller Edit"; ObjectID = "R3b-Ox-sS8"; */
 "R3b-Ox-sS8.title" = "Controller Edit";
@@ -125,14 +125,14 @@
 /* Class = "UITableViewSection"; headerTitle = "ゲームキューブ"; ObjectID = "dLT-on-vPp"; */
 "dLT-on-vPp.headerTitle" = "ゲームキューブ";
 
-/* Class = "UILabel"; text = "Help"; ObjectID = "dZI-b2-vNp"; */
-"dZI-b2-vNp.text" = "Help";
+/* Class = "UILabel"; text = "ヘルプ"; ObjectID = "dZI-b2-vNp"; */
+"dZI-b2-vNp.text" = "ヘルプ";
 
 /* Class = "UITableViewController"; title = "Group"; ObjectID = "e9W-dj-exp"; */
 "e9W-dj-exp.title" = "Group";
 
-/* Class = "UILabel"; text = "Help"; ObjectID = "fcW-EL-79q"; */
-"fcW-EL-79q.text" = "Help";
+/* Class = "UILabel"; text = "ヘルプ"; ObjectID = "fcW-EL-79q"; */
+"fcW-EL-79q.text" = "ヘルプ";
 
 /* Class = "UILabel"; text = "Controller Type 2"; ObjectID = "fdC-6f-15Y"; */
 "fdC-6f-15Y.text" = "Controller Type 2";
@@ -143,8 +143,8 @@
 /* Class = "UILabel"; text = "Wiimote 3"; ObjectID = "gq3-vA-FKC"; */
 "gq3-vA-FKC.text" = "Wiimote 3";
 
-/* Class = "UILabel"; text = ""; ObjectID = "hP9-5w-9Pr"; */
-"hP9-5w-9Pr.text" = "";
+/* Class = "UILabel"; text = "DSU Client"; ObjectID = "hP9-5w-9Pr"; */
+"hP9-5w-9Pr.text" = "DSU Client";
 
 /* Class = "UINavigationItem"; title = "Group Name"; ObjectID = "i2F-vi-m2c"; */
 "i2F-vi-m2c.title" = "Group Name";
@@ -152,14 +152,14 @@
 /* Class = "UILabel"; text = "Port 3"; ObjectID = "jJz-l4-7o7"; */
 "jJz-l4-7o7.text" = "Port 3";
 
-/* Class = "UILabel"; text = "Load Configuration Profile"; ObjectID = "joW-Na-mVW"; */
-"joW-Na-mVW.text" = "Load Configuration Profile";
+/* Class = "UILabel"; text = "読込"; ObjectID = "joW-Na-mVW"; */
+"joW-Na-mVW.text" = "読込";
 
 /* Class = "UINavigationItem"; title = "プロファイル"; ObjectID = "jsy-24-OXj"; */
 "jsy-24-OXj.title" = "プロファイル";
 
-/* Class = "UILabel"; text = "Extensions"; ObjectID = "nZJ-JZ-d70"; */
-"nZJ-JZ-d70.text" = "Extensions";
+/* Class = "UILabel"; text = "拡張コントローラ"; ObjectID = "nZJ-JZ-d70"; */
+"nZJ-JZ-d70.text" = "拡張コントローラ";
 
 /* Class = "UILabel"; text = "Port 4"; ObjectID = "oBE-Gs-oZH"; */
 "oBE-Gs-oZH.text" = "Port 4";
@@ -170,8 +170,8 @@
 /* Class = "UINavigationItem"; title = "Port 0"; ObjectID = "qeO-Qo-Gt8"; */
 "qeO-Qo-Gt8.title" = "Port 0";
 
-/* Class = "UILabel"; text = "Enabled"; ObjectID = "qhK-oa-Vec"; */
-"qhK-oa-Vec.text" = "Enabled";
+/* Class = "UILabel"; text = "Enable"; ObjectID = "qhK-oa-Vec"; */
+"qhK-oa-Vec.text" = "Enable";
 
 /* Class = "UILabel"; text = "形式"; ObjectID = "qlf-xO-p0I"; */
 "qlf-xO-p0I.text" = "形式";
@@ -179,8 +179,8 @@
 /* Class = "UILabel"; text = "Wiimote 4"; ObjectID = "s3f-8P-DdD"; */
 "s3f-8P-DdD.text" = "Wiimote 4";
 
-/* Class = "UINavigationItem"; title = ""; ObjectID = "s3w-kY-VxV"; */
-"s3w-kY-VxV.title" = "";
+/* Class = "UINavigationItem"; title = "DSU Client"; ObjectID = "s3w-kY-VxV"; */
+"s3w-kY-VxV.title" = "DSU Client";
 
 /* Class = "UITableViewController"; title = "Group List"; ObjectID = "v4O-Xv-FbN"; */
 "v4O-Xv-FbN.title" = "Group List";
@@ -191,11 +191,14 @@
 /* Class = "UILabel"; text = "Controller Type 4"; ObjectID = "wqu-s3-jmH"; */
 "wqu-s3-jmH.text" = "Controller Type 4";
 
-/* Class = "UINavigationItem"; title = "Extensions"; ObjectID = "xW3-sC-el7"; */
-"xW3-sC-el7.title" = "Extensions";
+/* Class = "UINavigationItem"; title = "拡張コントローラ"; ObjectID = "xW3-sC-el7"; */
+"xW3-sC-el7.title" = "拡張コントローラ";
 
 /* Class = "UITableViewController"; title = "Devices"; ObjectID = "xwN-gx-mk9"; */
 "xwN-gx-mk9.title" = "Devices";
 
 /* Class = "UILabel"; text = "Wiimote 1"; ObjectID = "ygq-gb-7v6"; */
 "ygq-gb-7v6.text" = "Wiimote 1";
+
+/* Class = "UITableViewSection"; headerTitle = "プロファイル"; ObjectID = "w8A-mj-uDH"; */
+"w8A-mj-uDH.headerTitle" = "プロファイル";
