iOS: Add general tab for Graphics settings

--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/en.lproj/Settings.strings
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/en.lproj/Settings.strings
@@ -55,3 +55,6 @@
 
 /* Class = "UILabel"; text = "Controllers"; ObjectID = "xpQ-qK-CHk"; */
 "xpQ-qK-CHk.text" = "Controllers";
+
+/* Class = "UILabel"; text = "Graphics"; ObjectID = "6BT-cH-KPV"; */
+"6BT-cH-KPV.text" = "Graphics";
