--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/Controller/ja.lproj/ControllerSettings.strings
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/Controller/ja.lproj/ControllerSettings.strings
@@ -202,3 +202,6 @@
 
 /* Class = "UITableViewSection"; headerTitle = "プロファイル"; ObjectID = "w8A-mj-uDH"; */
 "w8A-mj-uDH.headerTitle" = "プロファイル";
+
+/* Class = "UILabel"; text = "Stick Recentering"; ObjectID = "ygG-fJ-PN6"; */
+"ygG-fJ-PN6.text" = "Stick Recentering";
